Some Java 8 fixes #5